--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.66.0",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
