docs: expand api key templates for market data

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,8 +17,20 @@ JWT_REFRESH_EXPIRES_IN=30d
 EODHD_API_KEY=__SET_ME__
 LENZ_PARTNER_API_KEY=__SET_ME__
 CAPITOL_TRADES_TOKEN=__SET_ME__
-POLYGON_API_KEY=__SET_ME__
+ALPHAVANTAGE_API_KEY=__SET_ME__
+BENZINGA_API_KEY=__SET_ME__
+FINAGE_API_KEY=__SET_ME__
+FINANCIALDATA_API_KEY=__SET_ME__
+FINFEED_API_KEY=__SET_ME__
+FINNHUB_API_KEY=__SET_ME__
+FINVIZ_API_KEY=__SET_ME__
+FMP_API_KEY=__SET_ME__
 FRED_API_KEY=__SET_ME__
+NASDAQDATABASES_API_KEY=__SET_ME__
+OPENFIGI_API_KEY=__SET_ME__
+POLYGON_API_KEY=__SET_ME__
+POLYGON_ACCESS_KEY_ID=__SET_ME__
+STOCKDATAORG_API_KEY=__SET_ME__
 
 # Messaging / Alerts
 SENDGRID_API_KEY=__SET_ME__
