--- a/data-engineering/.env.example
+++ b/data-engineering/.env.example
@@ -2,6 +2,20 @@
 EODHD_API_KEY=__SET_ME__
 LENZ_PARTNER_API_KEY=__SET_ME__
 CAPITOL_TRADES_TOKEN=__SET_ME__
+ALPHAVANTAGE_API_KEY=__SET_ME__
+BENZINGA_API_KEY=__SET_ME__
+FINAGE_API_KEY=__SET_ME__
+FINANCIALDATA_API_KEY=__SET_ME__
+FINFEED_API_KEY=__SET_ME__
+FINNHUB_API_KEY=__SET_ME__
+FINVIZ_API_KEY=__SET_ME__
+FMP_API_KEY=__SET_ME__
+FRED_API_KEY=__SET_ME__
+NASDAQDATABASES_API_KEY=__SET_ME__
+OPENFIGI_API_KEY=__SET_ME__
+POLYGON_API_KEY=__SET_ME__
+POLYGON_ACCESS_KEY_ID=__SET_ME__
+STOCKDATAORG_API_KEY=__SET_ME__
 SENATE_STOCK_WATCHER_URL=https://senatestockwatcher.com/api
 HOUSE_STOCK_WATCHER_URL=https://housestockwatcher.com/api
 EDGAR_RSS_URL=https://www.sec.gov/cgi-bin/browse-edgar?action=getcurrent
